--- a/SEAQUA_A_160X600/style.css
+++ b/SEAQUA_A_160X600/style.css
@@ -1,79 +1,118 @@
-body { margin: 0px; padding: 0px; }
+body {
+  margin: 0px;
+  padding: 0px;
+}
 #ad {
-	position: absolute;
-	top: 0;
-	left: 0;
-    display: block;
-    border: rgb(0, 0, 0) 1px solid;
-    width: 158px;
-    height: 598px;
-    -moz-user-select: -moz-none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: #76CAD2; 
-  
-    overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  border: rgb(0, 0, 0) 1px solid;
+  width: 158px;
+  height: 598px;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: #76cad2;
+
+  overflow: hidden;
 }
 #banner {
-    position: absolute;
-    display: block;
-    width: 158px;
-    height: 598px;
-    background-color: #76CAD2;
-    overflow: hidden;
+  position: absolute;
+  display: block;
+  width: 158px;
+  height: 598px;
+  background-color: #76cad2;
+  overflow: hidden;
 }
 /* set positions */
-#background, #copywrapper, #copy1g, #copy1w, #copy2, #cta, #logo, #clouds, #wavefg, #octowrapper, #octobody, #octoarm1, #octoarm2, #octoarm3 {
-	position: absolute;
-	display: block;
-	top: 0;
-	left: 0;
-	z-index: 10;
-	visibility: hidden;
+#background,
+#copywrapper,
+#copy1g,
+#copy1w,
+#copy2,
+#cta,
+#logo,
+#clouds,
+#wavefg,
+#octowrapper,
+#octobody,
+#octoarm1,
+#octoarm2,
+#octoarm3 {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  visibility: hidden;
 }
 
-#background { z-index: 9; }
-
-#wavefg { left: -120px; top: 205px; z-index: 20;  }
-
-
-#octowrapper { left: 47px; top: 370px }
-
-#octobody { z-index: 15}
-
-#octoarm1 { 
-	z-index: 16; 
-	top: 20px; 
-	left: -90px;
-	transform-origin: bottom right
-}
-		
-#octoarm2 { 
-	z-index: 12;
-	top: -30px;
-	left: -85px;
-	transform-origin: bottom right;
- }
-
-#octoarm3 { 
-	z-index: 11;
-	top: -84px;
-	left: 48px;
-	transform-origin: bottom right;
+#background {
+  z-index: 9;
 }
 
+#wavefg {
+  left: -120px;
+  top: 205px;
+  z-index: 20;
+}
 
+#octowrapper {
+  left: 47px;
+  top: 370px;
+}
 
+#octobody {
+  z-index: 15;
+}
 
-#clouds { left: -93px; top: -19px;}
-#wavefg { left: -75px; top: 406px; z-index: 21 }
+#octoarm1 {
+  z-index: 16;
+  top: 20px;
+  left: -90px;
+  transform-origin: bottom right;
+}
 
+#octoarm2 {
+  z-index: 12;
+  top: -30px;
+  left: -85px;
+  transform-origin: bottom right;
+}
 
-#copywrapper { top: 291px; left: 12px; z-index: 13 }
+#octoarm3 {
+  z-index: 11;
+  top: -84px;
+  left: 48px;
+  transform-origin: bottom right;
+}
 
+#clouds {
+  left: -93px;
+  top: -19px;
+}
+#wavefg {
+  left: -75px;
+  top: 406px;
+  z-index: 21;
+}
 
-#cta { top: 284px; left: 14px; z-index: 21 }
-#logo { top: 471px; left: 18px; z-index: 22 }
+#copywrapper {
+  top: 291px;
+  left: 12px;
+  z-index: 13;
+}
 
+#cta {
+  top: 284px;
+  left: 14px;
+  z-index: 21;
+}
+#logo {
+  top: 471px;
+  left: 18px;
+  z-index: 22;
+}
