--- a/staging/buds/ECHOB24_Anim_300x250/style.css
+++ b/staging/buds/ECHOB24_Anim_300x250/style.css
@@ -31,9 +31,21 @@
   z-index: 10;
   visibility: hidden;
 }
+.visible {
+  visibility: visible;
+}
 
 #buds {
   z-index: 20;
+}
+
+#noise {
+  width: 600px;
+  height: 500px;
+  opacity: 0.8;
+  background-image: url("images/noise.png");
+  z-index: 5;
+  background-repeat: repeat;
 }
 
 #highlight {
