Full TPR size build

--- a/staging/frames/ECHOF_Anim_728x90/style.css
+++ b/staging/frames/ECHOF_Anim_728x90/style.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   display: block;
-  border: rgb(0, 0, 0) 1px solid;
+  border: rgb(50, 50, 50) 1px solid;
   width: 726px;
   height: 88px;
   -moz-user-select: -moz-none;
@@ -11,7 +11,7 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: #4aa5ca;
+  background-color: #fff;
   overflow: hidden;
 }
 
@@ -20,42 +20,24 @@
   display: block;
   width: 726px;
   height: 88px;
-  background-color: #4aa5ca;
+  background-color: #fff;
   overflow: hidden;
 }
+
+#cta,
+#shadow,
+#frameWrapper {
+  transform-origin: 150px 125px;
+}
+
 .set {
   position: absolute;
   display: block;
-  top: 0px;
-  left: 0px;
+  top: -1px;
+  left: -1px;
   z-index: 10;
   visibility: hidden;
 }
 .visible {
   visibility: visible;
-}
-
-#buds {
-  z-index: 20;
-}
-
-#copy1,
-#copy2 {
-  transform-origin: 200px 50px;
-}
-
-#copy3 {
-  transform-origin: 425px 45px;
-}
-
-#buds {
-  transform-origin: 545px 50px;
-}
-
-#logo {
-  transform-origin: 145px 45px;
-}
-
-#price {
-  transform-origin: 625px 50px;
 }
