--- a/staging/frames/ECHOF_Anim_300x600/style.css
+++ b/staging/frames/ECHOF_Anim_300x600/style.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   display: block;
-  border: rgb(0, 0, 0) 1px solid;
+  border: rgb(50, 50, 50) 1px solid;
   width: 298px;
   height: 598px;
   -moz-user-select: -moz-none;
@@ -11,7 +11,7 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: #4aa5ca;
+  background-color: #fff;
   overflow: hidden;
 }
 
@@ -20,21 +20,17 @@
   display: block;
   width: 298px;
   height: 598px;
-  background-color: #4aa5ca;
+  background-color: #fff;
   overflow: hidden;
 }
 .set {
   position: absolute;
   display: block;
-  top: 0px;
-  left: 0px;
+  top: -1px;
+  left: -1px;
   z-index: 10;
   visibility: hidden;
 }
 .visible {
   visibility: visible;
-}
-
-#buds {
-  z-index: 20;
 }
