Full prospecting builds

--- a/staging/schweitzer/SCHW_Prosp2_Anim_160x600/style.css
+++ b/staging/schweitzer/SCHW_Prosp2_Anim_160x600/style.css
@@ -4,8 +4,8 @@
   left: 0;
   display: block;
   border: rgb(50, 50, 50) 1px solid;
-  width: 298px;
-  height: 248px;
+  width: 158px;
+  height: 598px;
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
@@ -19,18 +19,28 @@
 #banner {
   position: absolute;
   display: block;
-  width: 298px;
-  height: 248px;
+  width: 158px;
+  height: 598px;
   background-color: #242e35;
   overflow: hidden;
 }
 
 #bg {
-  transform-origin: top right;
+  transform-origin: bottom center;
+}
+
+#bgWrapper {
+  position: absolute;
+  display: block;
+  top: 413px;
+  width: 160px;
+  height: 187px;
+  overflow: hidden;
+  visibility: visible;
 }
 
 #logo {
-  transform-origin: 69px 195px;
+  transform-origin: 81px 278px;
 }
 
 #dot {
